Finished up the editing for my website

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Kaleab Worku</h1>
-							<p>CS and Finance undergraduate @ Augustana College </p>
-							<P><a href="https://www.linkedin.com/in/kaleab-worku22/">Linkedin Account</a></P>
+							<h2>Welcome to my webpage! I am Kaleab Worku.</h2>
+							<p>Currently CS and Finance undergraduate student@ Augustana College </p>
+							<p><a href="https://www.linkedin.com/in/kaleab-worku22/" class="button" target="_blank">LinkedIn Account</a></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
+							
 						</div>
 					</section>
 
